[package]
name = "ws_server"
version = "0.1.0"
authors = ["louisdewardt <contact@louis.dewardt.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix = "0.9"
actix-web-actors = "2.0"

game = { path = "../game/" }
