[package]
name = "ws_server"
version = "0.1.0"
authors = ["louisdewardt <contact@louis.dewardt.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix = "0.9"
actix-rt = "1.0"
actix-web-actors = "2.0"
slog = "2.5"
sloggers = "1.0"
rand = "0.7"
serde_json = "1.0"
game = { path = "../game/" }
